--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -12,6 +12,7 @@
     display: none;
 
     @media (min-width: $tablet-width) {
+      position: static;
       display: flex;
       flex-direction: row;
     }
