--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -14,6 +14,9 @@
 .page-header__logo {
   position: absolute;
 
+  width: 185px;
+  height: 96px;
+
   justify-self: center;
   z-index: 2;
 
