--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -16,3 +16,13 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.image {
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+.picture {
+  line-height: 0;
+}
